--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.0"
+home = "0.5.3"
+colored = "2"
+toml = "0.5.3"
+serde = {version = "1.0.125", features = ["derive"]}
+rustyline = "8.0.0"
