got Apps struct and implementation working, got toml parsing issue though

--- a/Applications.toml
+++ b/Applications.toml
@@ -1,3 +1,7 @@
-items = [
-  {name = "neovim", config_path = "~/.config/nvim", file_names = ["coc-settings.json", "init.vim"]}
+apps = [
+  {name = "neovim", config_path = ".config/nvim", file_names = ["coc-settings.json", "init.vim"]},
+  {name = "neovim", config_path = ".config/nvim", file_names = ["coc-settings.json", "init.vim"]},
+  {name = "neovim", config_path = ".config/nvim", file_names = ["coc-settings.json", "init.vim"]},
+  {name = "neovim", config_path = ".config/nvim", file_names = ["coc-settings.json", "init.vim"]},
 ]
+
