--- a/Applications.toml
+++ b/Applications.toml
@@ -1,29 +1,4 @@
 [[items]]
-name = "test"
-config_path = "test"
-file_names = ["ttes"]
-
-[[items]]
-name = "test2"
-config_path = "test2"
-file_names = ["test2"]
-
-[[items]]
-name = "owudy"
-config_path = "wiagd"
-file_names = ["aywtdc"]
-
-[[items]]
-name = "oauywsd"
-config_path = "owuyd"
-file_names = ["uyoasvfcd"]
-
-[[items]]
-name = "iatyus"
-config_path = "wiytd"
-file_names = ["artywid"]
-
-[[items]]
-name = "bruh"
-config_path = "moment/times/two"
-file_names = ["kekl.txt", "cringe.com"]
+name = "chatterino"
+config_path = ".local/share/chatterino/Settings"
+file_names = ["commands.json", "settings.json", "window-layout.json"]
