--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ home = "0.5.3"
 colored = "2"
 toml = "0.5.3"
 serde = {version = "1.0.125", features = ["derive"]}
+serde_json = "1.0"
 rustyline = "8.0.0"
