reworking arguments, implementing gitrepo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ toml = "0.5.3"
 serde = {version = "1.0.125", features = ["derive"]}
 rustyline = "8.0.0"
 git2 = "0.13.17"
+uuid = {version = "0.4", features = ["v4"]}
