--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = {version = "1.0.125", features = ["derive"]}
 rustyline = "8.0.0"
 git2 = "0.13.17"
 uuid = {version = "0.4", features = ["v4"]}
+dialoguer = "0.8.0"
