--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "setman-rs"
+name = "Setman"
 version = "1.1.0"
 authors = ["mWalrus <hellkvistoskar@protonmail.com>"]
 edition = "2018"
+description = "Settings manager for various applications"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
