--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Setman"
+name = "setman"
 version = "1.1.0"
 authors = ["mWalrus <hellkvistoskar@protonmail.com>"]
 edition = "2018"
