--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = {version = "1.0.125", features = ["derive"]}
 git2 = "0.13.17"
 uuid = {version = "0.4", features = ["v4"]}
 dialoguer = "0.8.0"
+regex = "1.5.4"
